--- a/package.json
+++ b/package.json
@@ -13,11 +13,20 @@
   "author": "Jorge Trad <jetradl@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@date-io/moment": "^2.13.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/lab": "^5.0.0-alpha.69",
     "@mui/material": "^5.4.2",
+    "moment": "^2.29.1",
     "next": "^12.0.10",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuidv4": "^6.2.12"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.18",
+    "typescript": "^4.5.5"
   }
 }
