--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^5.4.2",
     "@mui/lab": "^5.0.0-alpha.69",
     "@mui/material": "^5.4.2",
+    "casual": "^1.6.2",
     "moment": "^2.29.1",
     "next": "^12.0.10",
     "react": "^17.0.2",
